--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+test/
 Footer
 © 2022 GitHub, Inc.
 Footer navigation
